Blocks & CSS Organized into BEM block folders

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,24 @@
 {
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "cSpell.words": [
-        "Beuys"
+        "Berea",
+        "Berners",
+        "Beuys",
+        "Cadwalader's",
+        "Cricieth",
+        "Dnipro",
+        "Dolgushina",
+        "Glagoleva",
+        "Grevisse",
+        "Horsch",
+        "Kenguruka",
+        "Kibira",
+        "Kseniya",
+        "Kyiv",
+        "Muramvya",
+        "Shipshewana",
+        "spoonbread",
+        "Steffan",
+        "Teza"
     ]
 }
