More readme fixes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "Cricieth",
         "Dnipro",
         "Dolgushina",
+        "Flexbox",
         "Glagoleva",
         "Grevisse",
         "Horsch",
@@ -19,6 +20,7 @@
         "Shipshewana",
         "spoonbread",
         "Steffan",
+        "SVGOMG",
         "Teza"
     ]
 }
